# useReq

./: .g.conf  .gitignore  CHANGELOG.md  README.md  TODO.md  WORKFLOW.md  clean.sh  doxygen.sh  package-lock.json  package.json  pdoc.sh  pyproject.toml  pyright.sh  req-init-upgrade-guidelines.sh  req-init.sh  req-overwrite.sh  req-update-preserve.sh  req-update.sh  req.sh  requirements.txt  ruff.sh  test-full-install.sh  test-install.sh  test.sh  tests.sh  venv.sh
.codex/: auth.json  history.jsonl  version.json
.codex/prompts/: req.change.md  (+5 more)
.req/: config.json  models.json  settings.json.backup
docs/: REFERENCES.md  REQUIREMENS.md  REQUIREMENTS.md  WORKFLOW.md  requirements.md
guidelines/: Google_C++_Style_Guide.md
images/: flowchart.md
pdoc/: index.html  search.js  usereq.html
prompts/: change.md  check.md  cover.md  fix.md  new.md  write.md
req/: requirements.md
req_scripts/: sample_script.sh
scripts/: Req.sh  md2toml.sh  pyright.sh  req.sh  ruff.sh  test-install.sh  version.sh
templates/: requirements.md
tests/: __init__.py  conftest.py  test_analyzer_cli.py  test_analyzer_comments.py  test_analyzer_core.py  test_analyzer_errors.py  test_analyzer_format.py  test_analyzer_helpers.py  test_cli.py  test_compress.py  test_dependency_manifests.py  test_doxygen_parser.py  test_files_commands.py  test_find_constructs.py  test_find_constructs_comprehensive.py  test_generate_markdown.py  test_helpers.py  test_release_workflow.py  test_source_analyzer.py  test_static_check.py  test_token_counter.py  test_update_check.py
vscode/: settings.json
(+130 files in other folders)
