[build-system]
requires = ["setuptools>=68.0.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "usereq"
version = "0.0.69"
description = "Initialize a project with prompts, agents, and templates from the useReq repository."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "tiktoken>=0.7.0",
]
authors = [
  { name = "Astral" }
]
keywords = ["astral", "uv", "project", "prompts", "templates"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/ogekuri/useReq"
Repository = "https://github.com/ogekuri/useReq"

[project.scripts]
use-req = "usereq.cli:main"
req = "usereq.cli:main"
usereq = "usereq.cli:main"

[tool.setuptools]
packages = ["usereq"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
usereq = [
  "resources/prompts/*.md",
  "resources/kiro/*.json",
  "resources/templates/*.md",
  "resources/vscode/settings.json",
]

[tool.uv.forms.use-req-init]
description = "Run the Req initialize workflow with uvx --form use-req-init."
command = "use-req"
